Bug 35015 - xls file crashes LibreOffice
Summary: xls file crashes LibreOffice
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.3.1 release
Hardware: Other All
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2011-03-04 06:26 UTC by Aideen
Modified: 2013-11-24 18:20 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Spreadsheet containing Chart & Data (41.00 KB, application/vnd.ms-excel)
2011-03-04 06:26 UTC, Aideen
Details
Screenshot of Error (15.00 KB, application/msword)
2011-03-04 06:37 UTC, Aideen
Details
Crash Report from OO3.3 (33.50 KB, application/msword)
2011-03-04 06:38 UTC, Aideen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aideen 2011-03-04 06:26:04 UTC
Created attachment 44119 [details]
Spreadsheet containing Chart & Data

This spreadsheet was created in OpenOffice 3.2.  It contains a Chart.  When opened in 3.2 it opens fine and it also opens fine in MS Word.  However when I try to open it in LibreOffice 3.3 or OO 3.3. it crashes.  When I remove the Chart it opens successfully.

Attached is the crash report from OO 3.3.  In LibreOffice I just get a message telling me
Comment 1 Alex Thurgood 2011-03-04 06:31:29 UTC
Hi,

Can not reproduce on Mac OSX 10.6.6, LibO 3.3.1. The file and chart open and display just fine, I can edit the data sets, keys, etc.

Specific to Windows ?

Alex
Comment 2 Alex Thurgood 2011-03-04 06:32:36 UTC
Also tried on OOo 3.3.0 for good measure, can not reproduce crash, the file opens just fine.

Alex
Comment 3 Aideen 2011-03-04 06:37:11 UTC
Created attachment 44120 [details]
Screenshot of Error
Comment 4 Aideen 2011-03-04 06:38:17 UTC
Created attachment 44121 [details]
Crash Report from OO3.3
Comment 5 Aideen 2011-03-04 06:56:46 UTC
It's also an issue on Open Suse 11.3
Comment 6 Don't use this account, use tml@iki.fi 2011-03-04 08:09:18 UTC
The screenshot is pointless, it doesn't give any specific information that could help solve the problems.

I can reproduce the crash with 3.3.1 on Windows XP.

Kohei, can you reproduce it on SUSE?
Comment 7 Kohei Yoshida 2011-03-04 08:17:38 UTC
Yes, it crashes with a puff of smoke.
Comment 8 tester8 2011-03-04 11:58:18 UTC
Reproduced with
LibreOffice 3.3.1 RC2 (1:3.3.0-1lucid1) - Ubuntu 10.04 x86 Linux 2.6.32-28-generic Russian UI
Comment 9 Cliff Kachinske 2011-03-17 10:37:28 UTC
I had the same crash except that Calc silently died.

Details:
Fedora 14, KDE 4.5, LO 3.3.1
Spreadsheet size: 4.6 M


I'm not at liberty to provide the spreadsheet.  If I can find out where LO puts crash reports, I'll look for it and attach it if there is one.  Suspect there might not be one because Calc died without a sound.

Spreadsheet contains charts.
Spreadsheet contains links to other spreadsheets.

According to the status bar, Calc loaded the file successfully and started to calculate formulas, then disappeared.

OO 3.2 on Ubuntu 10.10 opened the spreadsheet OK.

Tried to open the spreadsheet attached to the original bug report - died silently trying to open it.
Comment 10 Cliff Kachinske 2011-03-17 10:54:30 UTC
Deleted the charts from the 4.6 spreadsheet mentioned in my previous post.

The spread sheet opened fine in LO 3.3.1.

Added a chart, saved file, closed file.

Spread sheet opened OK again.

Seems like the problem occurs with charts created in MS Excel or OO prior to 3.3 but not with charts native to 3.3.1.
Comment 11 Kohei Yoshida 2011-03-18 16:43:33 UTC
I'm looking into this right now.
Comment 12 Kohei Yoshida 2011-03-18 19:05:20 UTC
Just fixed this on master.  Excel chart's title references are stored as relative references as opposed to absolute ones.  But the import code assumed that all chart references are absolute, so it ended up using uninitialized values, which in turned caused invalid memory access.