Charts' title reference is stored as relative reference. (fdo#35015)

For whatever reason, chart's title name references are stored as
relative references as opposed to absolute references.  Store the
relative reference values to the absolute values since the ref token
helper methods only use the absolute values when joining.